flux/apps/frontend/overlays/develop/patches/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  tls:
    - hosts:
        - develop.safeops.work
      secretName: frontend-tls
  rules:
    - host: develop.safeops.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
